docs: 프로젝트 전반의 README 문서 대규모 업데이트
프로젝트 내 23개 모듈의 `README.md` 파일을 전면 개편하여 문서의 가독성과 사용성을 대폭 향상시켰습니다.

- **`data` (11개 모듈)**: `exposed`, `hibernate`, `exposed-r2dbc` 등 데이터 계층 모듈의 README를 보강했습니다. 각 모듈의 핵심 기능, 의존성 추가 방법, 상세한 코드 사용 예시(Repository, 암호화/압축 컬럼, R2DBC, 캐시 연동 등), 주요 파일 목록을 추가하여 문서를 체계화했습니다.
- **`examples` (9개 모듈)**: `coroutines`, `redisson`, `virtualthreads`, `jpa-querydsl` 등 예제 모듈의 README를 개선했습니다. 각 예제별 학습 목표, 주요 패턴(분산 락, 동적 쿼리, Flow 등), 실행 방법을 명확히 기술하여 코드 이해도를 높였습니다.
- **`io` (2개 모듈)**: `grpc`, `netty` 모듈의 README에 서버/클라이언트 구현, `ByteBuf` 확장 함수 등 핵심 기능에 대한 설명과 코드 예제를 추가했습니다.
- **`vertx` (1개 모듈)**: `vertx-resilience4j` 모듈 README에 Circuit Breaker, Retry 등 Resilience4j 패턴을 Vert.x 환경에 적용하는 방법과 데코레이터 사용 예제를 상세히 기술했습니다.